@@ -1,5 +1,10 @@
 2010-07-01  Alan McGovern  <amcgovern@novell.com>
 
+	* System.Windows.Controls/TextBlockTest.cs: Update the
+	  TextBlock tests to SL4 compatibility.
+
+2010-07-01  Alan McGovern  <amcgovern@novell.com>
+
 	* System.Windows.Controls/ControlTest.cs: Added validators to
 	  Control.FontSize and Control.FontFamily. All Control tests
 	  now pass under SL4.
